--- a/codes/java-apps/day-5/.recommenders/caches/identified-project-coordinates.json
+++ b/codes/java-apps/day-5/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"D:\\oracle\\oracle-1stsept2023\\codes\\java-apps\\day-5\\HashSetDemo","type":"PROJECT","hints":{"PROJECT_NAME":"HashSetDemo"}},"ABSENT"],[{"location":"C:\\Program Files\\Java\\jre-1.8","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
+[[{"location":"C:\\Program Files\\Java\\jre-1.8","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
